latest, cba to comment all